--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -47,6 +47,7 @@
         </div>
         
         <button class="btn btn-dark edit-btn mt-3">Edit</button>
+        <button class="btn btn-dark delete-btn mt-3">Book</button>
     </form>
 </div>
 </div>
