--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -32,6 +32,9 @@
         <form method="post" action="/listings/<%= listing._id %>?_method=Delete">
             <button class="btn btn-dark offset-5">Delete</button>
         </form>
+        <form action="">
+          <button class="btn btn-dark delete-btn mt-3">Book</button>
+        </form>
     </div>
     <% } %>
 
