--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -27,14 +27,13 @@
 
     <% if(currUser && listing.owner._id.equals(currUser._id)){ %>
     <div class="btns">
+      <a href="#" class="btn btn-primary">Book</a>
+
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
     
         <form method="post" action="/listings/<%= listing._id %>?_method=Delete">
             <button class="btn btn-dark offset-5">Delete</button>
-        </form>
-        <form action="">
-          <button class="btn btn-dark book-btn mt-3">Book</button>
-        </form>
+        </form>          
     </div>
     <% } %>
 
