--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -32,7 +32,7 @@
         <form method="post" action="/listings/<%= listing._id %>?_method=Delete">
             <button class="btn btn-dark offset-5">Delete</button>
         </form>          
-        <a href="#" class="btn btn-primary">Book</a>
+        <a href="#" class="btn btn-primary ml-auto">Book</a>
 
     </div>
     <% } %>
