--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -26,13 +26,13 @@
     <br>
 
     <% if(currUser && listing.owner._id.equals(currUser._id)){ %>
-    <div class="btns">
+    <div class="btns" style="display: flex;">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
     
         <form method="post" action="/listings/<%= listing._id %>?_method=Delete">
             <button class="btn btn-dark offset-5">Delete</button>
         </form>          
-        <a href="#" class="btn btn-primary ml-auto">Book</a>
+        <a href="#" class="btn btn-primary ">Book</a>
 
     </div>
     <% } %>
