--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -28,7 +28,7 @@
     <% if(currUser && listing.owner._id.equals(currUser._id)){ %>
     <div class="btns" style="display: flex;">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-        <a href="#" class="btn btn-primary col-1 offset-3 ml-auto">Book</a>
+        <a href="#" class="btn btn-primary col-1  ml-auto">Book</a>
 
         <form method="post" action="/listings/<%= listing._id %>?_method=Delete">
             <button class="btn btn-dark offset-5">Delete</button>
